<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.octavio.ruber.formulariodecontactor.Activity_Confirmacion_Datos">
    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmacion"
        android:textSize="@dimen/titulo_confirmacion"
        android:gravity="center_horizontal"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tvNombre"
        android:layout_below="@id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="nombre_completo"
        android:textSize="@dimen/texto_confirmacion"
        android:layout_marginTop="@dimen/espacio_grande"
        />
    <TextView
        android:id="@+id/tvFecha"
        android:layout_below="@id/tvNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fecha"
        android:textSize="@dimen/texto_confirmacion"
        android:layout_marginTop="@dimen/espacio_pequeno"
        />
    <TextView
        android:id="@+id/tvTelefono"
        android:layout_below="@id/tvFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telefono1"
        android:textSize="@dimen/texto_confirmacion"
        android:layout_marginTop="@dimen/espacio_pequeno"
        />
    <TextView
        android:id="@+id/tvEmail"
        android:layout_below="@id/tvTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="@dimen/texto_confirmacion"
        android:layout_marginTop="@dimen/espacio_pequeno"
        />
    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_below="@id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descripcion"
        android:textSize="@dimen/texto_confirmacion"
        android:layout_marginTop="@dimen/espacio_pequeno"
        />
    <Button
        android:id="@+id/btEditar"
        android:layout_below="@id/tvDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/texto_confirmacion"
        android:layout_marginTop="@dimen/espacio_grande2"
        android:text="@string/editar_datos"
        />

</RelativeLayout>
