<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.octavio.ruber.formulariodecontactor.MainActivity">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/izquierda"
        android:layout_marginRight="@dimen/derecha"
        >

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/nombre_completo"
            android:textSize="@dimen/size_caracteres"/>

    </android.support.design.widget.TextInputLayout>
    <DatePicker
        android:id="@+id/dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/calendario_alto"
        android:layout_below="@id/tilNombre"
        android:datePickerMode="spinner"
        android:spinnersShown="true"
        android:calendarViewShown="false"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/izquierda"
        android:layout_marginRight="@dimen/derecha"
        android:layout_marginBottom="@dimen/activity_vertical_margin">
    </DatePicker>
    <LinearLayout
        android:id="@+id/btnLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_below="@id/dp"
        android:layout_marginTop="@dimen/boton_top"
        android:layout_marginLeft="@dimen/izquierda"
        android:layout_marginRight="@dimen/derecha"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        >

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"/>
    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OK"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLayout"
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:layout_marginLeft="@dimen/izquierda"
        android:layout_marginRight="@dimen/derecha"
        >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txilTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLayout"
        >

        <EditText
            android:id="@+id/etTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/telefono"
            android:textSize="@dimen/size_caracteres"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txilTelefono"
        >

        <EditText
            android:id="@+id/etMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/mail"
            android:textSize="@dimen/size_caracteres"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txilDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txilEmail"
        >

        <EditText
            android:id="@+id/etDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/descripcion"
            android:textSize="@dimen/size_caracteres"/>
    </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/siguiente"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/izquierda"
        android:layout_marginRight="@dimen/derecha"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        />
</RelativeLayout>
